--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,7 @@ a:hover {
 
 #current-location-button {
   display: block;
-  margin: 50px auto 0;
+  margin: 50px auto;
 }
 
 #search-submit-button {
