--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   font-family: "Poppins", sans-serif;
 }
 body {
-  margin: 100px auto;
+  margin: 80px auto;
   max-width: 50%;
   color: #64647d;
 }
@@ -40,8 +40,9 @@ a:hover {
 }
 
 #current-description {
-  margin: 0 auto 20px;
   text-transform: capitalize;
+  margin-bottom: 3px;
+  font-size: 15px;
 }
 
 #current-degree {
@@ -88,9 +89,9 @@ a:hover {
 .description {
   text-align: left;
   padding-left: 50px;
-
-  line-height: 2;
-  font-size: 18px;
+  padding-top: 5px;
+  line-height: 1.5;
+  font-size: 13px;
 }
 
 .card {
