--- a/src/style.css
+++ b/src/style.css
@@ -78,26 +78,6 @@ a:hover {
   font-size: 13px;
 }
 
-.card {
-  text-align: center;
-}
-
-.card-day {
-  padding-top: 10px;
-  margin-bottom: 0;
-  font-weight: 500;
-  font-size: 15px;
-}
-
-.card-emoji {
-  font-size: 30px;
-  margin-bottom: 0;
-}
-
-.card-temp {
-  margin-bottom: 10px;
-  font-size: 13px;
-}
 .input-group {
   width: 70%;
 }
@@ -116,4 +96,35 @@ a:hover {
 }
 .credit {
   margin: 10px 10px;
+}
+/*
+.weather-forecast {
+  margin-top: 10px;
+}
+
+.weather-forecast h3 {
+  color: rgb(186, 186, 186);
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  height: 15px;
+  line-height: 15px;
+  padding-top: 7px;
+}
+
+.weather-forecast img {
+  display: block;
+  margin: 0 auto;
+  height: 48px;
+  width: 48px;
+}
+
+.weather-forecast-temperature {
+  text-align: center;
+  color: rgb(135, 135, 135);
+  font-size: 13px;
+  font-weight: 400;
+  height: auto;
+  line-height: 15px;
+  white-space: nowrap;
 }
