--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,12 @@ a:hover {
   cursor: pointer;
 }
 
+h3 {
+  font-size: 20px;
+  display: block;
+  text-align: center;
+}
+
 .weather-container {
   border: 1px solid grey;
   border-radius: 10px;
@@ -98,43 +104,8 @@ a:hover {
   margin: 10px 10px;
 }
 
-.future-temp{
+.future-temp {
   display: flex;
   margin: 0px auto 20px;
   text-align: center;
-  
-}
-
-
-
-/*
-.weather-forecast {
-  margin-top: 10px;
-}
-
-.weather-forecast h3 {
-  color: rgb(186, 186, 186);
-  font-size: 14px;
-  font-weight: 400;
-  text-align: center;
-  height: 15px;
-  line-height: 15px;
-  padding-top: 7px;
-}
-
-.weather-forecast img {
-  display: block;
-  margin: 0 auto;
-  height: 48px;
-  width: 48px;
-}
-
-.weather-forecast-temperature {
-  text-align: center;
-  color: rgb(135, 135, 135);
-  font-size: 13px;
-  font-weight: 400;
-  height: auto;
-  line-height: 15px;
-  white-space: nowrap;
 }
