Added forecast days of the week

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 }
 body {
   margin: 80px auto;
-  max-width: 60%;
+  max-width: 70%;
   color: #64647d;
 }
 
@@ -14,8 +14,8 @@ header {
 }
 
 h1 {
-  margin: 20px auto 0px;
-  letter-spacing: 3px;
+  margin: 30px auto;
+  letter-spacing: 5px;
   word-spacing: 5px;
 }
 
@@ -48,13 +48,14 @@ h3 {
 
 #current-description {
   text-transform: capitalize;
-  margin-bottom: 3px;
-  font-size: 16px;
+  margin-bottom: 2px;
+  font-size: 18px;
 }
 
 #current-degree {
   font-size: 50px;
   padding-left: 10px;
+  padding-top: 15px;
 }
 
 .unit:focus {
@@ -77,10 +78,10 @@ h3 {
 }
 
 .description {
-  text-align: left;
+  text-align: center;
   padding-left: 50px;
-  padding-top: 15px;
-  line-height: 1.5;
+  padding-top: 20px;
+  line-height: 1.7;
   font-size: 15px;
 }
 
@@ -108,4 +109,8 @@ h3 {
   display: flex;
   margin: 0px auto 20px;
   text-align: center;
+}
+
+.forecast-day {
+  margin-top: 30px;
 }
